# ML-For-Beginners-copy

./: pyproject.toml
10-Workshop/: A1-Gradio_Quickstart.ipynb
10-Workshop/A2-HFSpaces-from-Jupyter/: app.ipynb
10-Workshop/A3-RLEI/: q_learning_minimal.py
8-Reinforcement/1-QLearning/solution/: notebook.ipynb
8-Reinforcement/2-Gym/solution/: notebook.ipynb
